<resources>
    <string name="app_name">IsmartvVoice</string>


    <string name="btn_test">测试</string>
    <string name="setting">设置</string>
    <string name="nlu">语义解析</string>
    <string name="nlu_summary">是否开启语义解析</string>

    <string name="audio_sample">采样率</string>
    <string name="language">语言</string>
    <string name="sound_effect">开启音效</string>
    <string name="bluetooth">开启蓝牙</string>


    <string name="record_tip">长按语音键录音</string>
    <string name="voice_tip_text">您可以说</string>

    <string name="video_type">视频</string>
    <string name="app_type">应用</string>

    <string name="confirm_text">确定</string>
    <string name="cancel_text">取消</string>

    <string name="search_title">您正在搜索&#160;:&#160;%1$s</string>
    <string name="recommend_content_title">向您推荐近似内容</string>
    <string name="search_no_result">没有与您需求匹配的结果</string>

    <string name="no_weather_tip">未查询到你输入的地址,您可以手动查询:</string>
    <string name="more_weather_btn">更多省市天气</string>
    <string name="weather_current_location">当前位置:%1$s</string>
    <string name="recognize_error_tip_title">你是否想找</string>
    <string name="recognize_error_tip">我没有听清,请您再说一次</string>
    <string name="ismartv_store_app_not_install">视云商店未安装</string>
    <string name="today_hot_vod">今日热搜</string>
    <string name="app_update_title">升级通知</string>
    <string name="local_app">已安装</string>
</resources>
