<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory
        android:title="常用"
        >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/nlu"
            android:summary="@string/nlu_summary"
            android:title="@string/nlu"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/sound_effect"
            android:title="@string/sound_effect"
            />

        <ListPreference
            android:defaultValue="cmn-Hans-CN"
            android:dialogTitle="@string/language"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_entry_value"
            android:key="@string/language"
            android:title="@string/language"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="高级"
        >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/bluetooth"
            android:title="@string/bluetooth"
            />
        <ListPreference
            android:defaultValue="16000"
            android:dialogTitle="@string/audio_sample"
            android:entries="@array/audio_sample"
            android:entryValues="@array/audio_sample"
            android:key="@string/audio_sample"
            android:title="@string/audio_sample"
            />
    </PreferenceCategory>
</PreferenceScreen>